# IVS_proj2

./: CMakeLists.txt  README.md  TomojavoCalc.desktop.in  UzivatelskaPrirucka-TOMOJAVO.docx  hodnoceni.txt  skutecnost.txt
plan/: xdolak09_xjerab28_xteich02_xzahra33_plan.txt
profiling/: 1000in  vystup.txt  zprava.txt
src/: Doxyfile  Doxyfile.bak  IMath_h.py  Makefile  link_lib_w_gui.py  main.py  profiling.py
